--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
                         <tomee.remote.support>true</tomee.remote.support>
                         <tomee.serialization.class.whitelist>*</tomee.serialization.class.whitelist>
                         <tomee.serialization.class.blacklist>-</tomee.serialization.class.blacklist>
+                        <org.apache.activemq.SERIALIZABLE_PACKAGES>*</org.apache.activemq.SERIALIZABLE_PACKAGES>
                     </systemVariables>
                     <inlinedTomEEXml>
                         <tomee>
